# coincidence

downloader/: .gitignore  Cargo.toml  coincidence-siberia.cfg  downloader-test.cfg  downloader.cfg  ph2dl-planck.cfg  ph2dl.cfg
downloader/scripts/: all-pixel-coincidences.sh  coincidences.sh  count-pixel-coincidences.sh  find-coincidences.sh  fix-tpi.sh  iasi-extr-mpk-by-pixel.sh  iasi-l1c-download.sh  ph2dl.sh  run-ph1-coincidences.sh  run-ph2-coincidences.sh  run-pixel-coincidences.sh  run.sh  tropomi-extr-mpk-by-pixel.sh  tropomi-l2-download.sh
downloader/src/: amcut.rs  backoff.rs  common.rs  crisfpex.rs  fancy_footprint.rs  footprint.rs  fptool.rs  iasifpex.rs  intersect.rs  main.rs  mapmaker.rs  minisvg.rs  misc_error.rs  mkretmap.rs  outline_parser.rs  poly_utils.rs  progress.rs  report.rs  s5pdownload.rs  stats.rs  test_clipper.rs  test_minisvg.rs  test_outline_parser.rs  tropomifpex.rs
downloader/test/: test1.json  test2.json  test3.json
iasi-reader/: Makefile  extract_footprints.f90  iasidate.f90  iasinat2nex.f90  iasinatspc.f90  mod_calendar.f90  mod_datetime.f90  mod_l1c_l2_reading.f90  mod_l1c_l2_reading_orig.f90
scripts/: s5p-test1.sh
toolchain/: Dockerfile
