[package]
name = "downloader"
version = "0.1.0"
authors = ["Berke DURAK <bd@exhrd.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "^0.6" }
url = { version = "^2.2" }
xml-rs = { version = "0.8" }
regex = { version = "1" }
nom = { version = "6" }
json = { version = "^0.11" }
chrono = { version = "^0.4" }
rmp-serde = { version = "^0.15" }
geo = { version = "^0.17" }

[[bin]]
name = "intersect"
path = "src/intersect.rs"

# percent-encoding = { version = "^2.1" }

[[bin]]
name = "test_outline_parser"
path = "src/test_outline_parser.rs"

[[bin]]
name = "test_minisvg"
path = "src/test_minisvg.rs"