[package]
name = "downloader"
version = "0.1.0"
authors = ["Berke DURAK <bd@exhrd.fr>"]
edition = "2024"

[dependencies]
footprint = { version = "0.2.3" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "^0.6" }
url = { version = "^2.2" }
xml-rs = { version = "0.8" }
nom = { version = "6" }
json = { version = "^0.11" }
chrono = { version = "^0.4.43" }
serde_json = { version = "^1.0" }
rmp-serde = { version = "^0.15" }
geo = { version = "^0.31" }
geo-clipper = { version = "^0.9" }
hdf5 = { git = "https://github.com/balintbalazs/hdf5-rust", branch = "master" } #version = "^0.7" }
clap = { version = "^2.33" }
ndarray = { version = "^0.13" }
log = { version = "^0.4" }
simple_logger = { version = "^5.2" }
#percent-encoding = { version = "^2.1" }
geojson = { version = "^0.21" }
regex = { version = "^1.3" }
shell-escape = { version = "^0.1.5" }
anyhow = { version = "^1.0" }
pico-args = { version = "0.5.0" }
fpindex-lib = { path = "../../fpindex/lib" }

[[bin]]
name = "intersect"
path = "src/intersect.rs"

[[bin]]
name = "test_outline_parser"
path = "src/test_outline_parser.rs"

[[bin]]
name = "test_clipper"
path = "src/test_clipper.rs"

[[bin]]
name = "crisfpex"
path = "src/crisfpex.rs"

[[bin]]
name = "tropomifpex"
path = "src/tropomifpex.rs"

[[bin]]
name = "iasifpex"
path = "src/iasifpex.rs"

[[bin]]
name = "s5pdownload"
path = "src/s5pdownload.rs"

[[bin]]
name = "mkretmap"
path = "src/mkretmap.rs"

[[bin]]
name = "mapmaker"
path = "src/mapmaker.rs"
